--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@typescript-eslint/parser": "^8.0.1",
     "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
@@ -19,11 +20,18 @@
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.0.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
+    "serialize-javascript": "^6.0.2",
+    "shell-quote": "^1.8.1",
+    "sockjs": "^0.3.24",
     "tailwindcss": "^3.0.0",
-    "vite": "^5.0.0"
+    "terser": "^5.31.5",
+    "tough-cookie": "^4.1.4",
+    "vite": "^5.0.0",
+    "webpack-dev-middleware": "^7.3.0",
+    "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.0",
