--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@typescript-eslint/parser": "^8.0.1",
     "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.12",
     "react": "^18.0.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.0.0",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
