--- a/package.json
+++ b/package.json
@@ -7,16 +7,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
+    "@mui/material": "^5.16.7",
     "@typescript-eslint/parser": "^8.0.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "ag-grid-community": "^32.1.0",
+    "ag-grid-react": "^32.1.0",
     "axios": "^1.7.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.12",
+    "devextreme": "^24.1.4",
+    "devextreme-react": "^24.1.4",
+    "framer-motion": "^11.3.24",
     "react": "^18.0.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.0.0",
