Update component and other changes

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
@@ -16,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@typescript-eslint/parser": "^8.0.1",
     "@vitejs/plugin-react": "^4.3.1",
@@ -26,13 +28,17 @@
     "dayjs": "^1.11.12",
     "devextreme": "^24.1.4",
     "devextreme-react": "^24.1.4",
-    "framer-motion": "^11.3.24",
+    "framer-motion": "^11.3.28",
+    "googleapis": "^142.0.0",
+    "json-to-csv-export": "^3.0.1",
+    "json2csv": "^6.0.0-alpha.2",
+    "papaparse": "^5.4.1",
     "react": "^18.0.0",
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.0.0",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.0.0",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.28.0",
